   technology name (e.g. SIP, IAX, etc) of the channel being spied on.
 * The Jack application now has a c() option to supply a custom client name.
 * Chanspy has a new option, 'B', which can be used to "barge" on a call. This is
   like the pre-existing whisper mode, except that the spy can also talk to the
   participant on the bridged channel as well.

SIP Changes
-----------
 * The ATTENDED_TRANSFER_COMPLETE_SOUND can now be set using setvar to cause a given
   audio file to be played upon completion of an attended transfer.
 * Added DNS manager support to registrations for peers referencing peer entries.
   DNS manager runs in the background which allows DNS lookups to be run asynchronously 
   as well as periodically updating the IP address. These properties allow for
   better performance as well as recovery in the event of an IP change.
 * Performance improvements via using hash tables (astobj2) and doubly-linked lists to improve 
   load/reload of large numbers of peers/users by ~40x (for large lists of peers.
   Initially, we saw 4x improvement in call setup/destruction, but at the time
   of merging, this gain has disappeared; further research will be done to try
   and restore this performance improvement. Astobj2 refcounting is now used
   for users, peers, and dialogs.  Users are encouraged to assist in regression
   testing and problem reporting!

IAX Changes
-----------
 * Existing DNS manager lookups extended to check for SRV records.

CLI Changes
-----------
  * New CLI command, "config reload <file.conf>" which reloads any module that
     references that particular configuration file.  Also added "config list"
     which shows which configuration files are in use.

DNS manager changes
-------------------
  * Addresses managed by DNS manager now can check to see if there is a DNS
    SRV record for a given domain and will use that hostname/port if present.

------------------------------------------------------------------------------